# issuetracker

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  gitlab-mirror.yml
.gitlab/ci/: ci.yml  github-mirror.yml  pypi-release.yml
devserver/: manage.py  schema.yaml
devserver/devserver/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
genericissuetracker/: __init__.py  apps.py  settings.py  signals.py
genericissuetracker/migrations/: 0001_initial.py  0002_issue_issue_number.py  0003_alter_issue_issue_number_issuestatushistory.py  0004_issueattachment_number_issuecomment_number_and_more.py  0005_backfill_numbers.py  0006_alter_issueattachment_number_and_more.py  0007_issueattachment_comment_and_more.py  0008_backfill_uploaded_by_email.py  0009_alter_issueattachment_uploaded_by_email.py  0010_issuestatushistory_event_type_and_more.py
genericissuetracker/models/: __init__.py  attachment.py  base.py  comment.py  issue.py  label.py  status_history.py
genericissuetracker/serializers/base/: issue.py
genericissuetracker/serializers/v1/read/: attachment.py  comment.py  issue.py  label.py
genericissuetracker/serializers/v1/write/: attachment.py  comment.py  issue.py  label.py  status.py
genericissuetracker/services/: filtering.py  identity.py  issue_lifecycle.py  lifecycle_policy.py  lifecycle_rules.py  pagination.py  permissions.py
genericissuetracker/urls/: root.py  v1.py
genericissuetracker/views/v1/: base.py
genericissuetracker/views/v1/crud/: attachment.py  comment.py  issue.py  label.py
genericissuetracker/views/v1/read/: attachment.py  comment.py  issue.py  label.py
